Do not quote NULL sentinel

https://bugzilla.gnome.org/show_bug.cgi?id=695791